delete image-data from hint

deleting image-data form notification hints to avoid double saving data,
because the image is already cached and also prevents the Notification
DBus from crashing.

BUG: 507304